--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,94 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+*,
+::after,
+::before {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+html {
+  height: 100%;
+}
+
 body {
-  background-color: crimson;
+  min-height: 100vh;
+  width: 100%;
+  font-family: "Outfit", sans-serif;
+  height: 100vh;
+  background-color: hsl(212deg, 45%, 89%);
+}
+
+.container {
+  width: 90%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 45px 0;
+  overflow: hidden;
+}
+
+.main .content {
+  height: auto;
+}
+.main .content .content__container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.main .content .content__container .content__card {
+  width: 280px;
+  height: max-content;
+  background-color: hsl(0deg, 0%, 100%);
+  padding: 15px 15px 35px;
+  border-radius: 10px;
+}
+@media screen and (max-width: 425px) {
+  .main .content .content__container .content__card {
+    width: 100%;
+    padding: 15px 15px 50px;
+  }
+}
+.main .content .content__container .content__card .card__img {
+  display: block;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: inherit;
+}
+.main .content .content__container .content__card .card__title {
+  margin-top: 20px;
+  font-weight: 700;
+  font-size: 20px;
+  color: hsl(218deg, 44%, 22%);
+  text-align: center;
+}
+.main .content .content__container .content__card .card__action {
+  margin-top: 15px;
+  text-align: center;
+  color: hsl(220deg, 15%, 55%);
+  font-size: 15px;
+}
+
+.footer .footer__container {
+  display: flex;
+  justify-content: center;
+}
+.footer .footer__container .footer__credits .footer__description {
+  color: hsl(218deg, 44%, 22%);
+  font-size: 15px;
+  font-weight: 700;
+}
+.footer .footer__container .footer__credits .footer__description .footer__link {
+  color: inherit;
+  display: inline-block;
+}
+.footer .footer__container .footer__credits .footer__description .footer__link:nth-child(1) {
+  margin-bottom: 10px;
+}
+.footer .footer__container .footer__credits .footer__description .footer__link:hover {
+  color: hsl(220deg, 15%, 55%);
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
