--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,111 @@
+@use "index/index";
+
+
+*,
+::after,
+::before {
+    @include index.resetGeneralProperties;
+}
+
+html {
+    @include index.setHTML;
+}
+
 body {
-    background-color: steelblue;
+    @include index.setBody;
+    font-family: index.$fontOutfit;
+    height: 100vh;
+    background-color: index.$lightGray;
+}
+
+.container {
+    @include index.setContainer;
+}
+
+.main {
+
+    .content {
+        height: auto;
+
+        .content__container {
+            display: flex;
+            justify-content: space-evenly;
+
+            .content__card {
+                width: 280px;
+                height: max-content;
+                background-color: index.$white;
+                padding: 15px 15px 35px;
+                border-radius: 10px;
+
+                @media screen and (max-width: 425px) {
+                    width: 100%;
+                    padding: 15px 15px 50px;
+                }
+
+                .card__img {
+                    display: block;
+                    width: 100%;
+                    height: 250px;
+                    object-fit: cover;
+                    border-radius: inherit;
+                }
+
+                .card__title {
+                    margin-top: 20px;
+                    font-weight: index.$outfitW700;
+                    font-size: 20px;
+                    color: index.$darkBlue;
+                    text-align: center;
+                }
+
+                .card__action {
+                    margin-top: 15px;
+                    text-align: center;
+                    color: index.$grayishBlue;
+                    font-size: index.$outfit15px;
+                }
+
+            }
+
+        }
+
+    }
+    
+}
+
+.footer {
+
+    .footer__container {
+        display: flex;
+        justify-content: center;
+
+        .footer__credits {
+
+            .footer__description {
+                color: index.$darkBlue;
+                font-size: index.$outfit15px;
+                font-weight: index.$outfitW700;
+
+                .footer__link {
+                    color: inherit;
+                    display: inline-block;
+
+                    &:nth-child(1) {
+                        margin-bottom: 10px;
+                    }
+
+                    &:hover {
+                        color: index.$grayishBlue;
+                        text-decoration: none;
+                    }
+
+                }
+
+            }
+            
+        }
+
+    }
+
 }
