--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ body {
 .footer .footer__container {
   display: flex;
   justify-content: center;
+  padding: 0;
 }
 .footer .footer__container .footer__credits .footer__description {
   color: hsl(218deg, 44%, 22%);
