--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -79,6 +79,7 @@ body {
     .footer__container {
         display: flex;
         justify-content: center;
+        padding: 0;
 
         .footer__credits {
 
