--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,6 @@ body {
   min-height: 100vh;
   width: 100%;
   font-family: "Outfit", sans-serif;
-  height: 100vh;
   background-color: hsl(212deg, 45%, 89%);
 }
 
@@ -30,6 +29,7 @@ body {
 
 .main .content {
   height: auto;
+  padding-top: 0.1px;
 }
 .main .content .content__container {
   display: flex;
@@ -70,27 +70,29 @@ body {
   font-size: 15px;
 }
 
-.footer {
-  margin-top: 30px;
+.footer .main {
+  height: auto;
+  padding-top: 0.1px;
 }
-.footer .footer__container {
+.footer .main .footer__container {
   display: flex;
   justify-content: center;
   padding: 0;
+  margin-top: 80px;
 }
-.footer .footer__container .footer__credits .footer__description {
+.footer .main .footer__container .footer__credits .footer__description {
   color: hsl(218deg, 44%, 22%);
   font-size: 15px;
   font-weight: 700;
 }
-.footer .footer__container .footer__credits .footer__description .footer__link {
+.footer .main .footer__container .footer__credits .footer__description .footer__link {
   color: inherit;
   display: inline-block;
 }
-.footer .footer__container .footer__credits .footer__description .footer__link:nth-child(1) {
+.footer .main .footer__container .footer__credits .footer__description .footer__link:nth-child(1) {
   margin-bottom: 10px;
 }
-.footer .footer__container .footer__credits .footer__description .footer__link:hover {
+.footer .main .footer__container .footer__credits .footer__description .footer__link:hover {
   color: hsl(220deg, 15%, 55%);
   text-decoration: none;
 }
